# Slacksor

./: .env.example  .gitignore  INSTRUCTIONS.md  README.md  com.slacksor.plist  pyproject.toml  requirements.txt  start.sh
src/: bridge_commands.py  config.py  cursor_agent.py  cursor_hooks_sync.py  db.py  keep_awake.py  message_translator.py  session_manager.py  slack_handlers.py  slacksor.py  transcript_watcher.py
src/tui/: __init__.py  app.py  dashboard.tcss
src/tui/screens/: __init__.py  add_project.py  confirm.py  dashboard.py  model_select.py  sessions.py  type_confirm.py
tests/: bridge_commands_test.py  config_test.py  conftest.py  cursor_agent_test.py  cursor_hooks_sync_test.py  db_test.py  keep_awake_test.py  message_translator_test.py  session_manager_test.py  slack_handlers_test.py  slacksor_test.py  transcript_watcher_test.py  tui_test.py
